[gd_scene load_steps=3 format=3 uid="uid://cju57iyvbbtxg"]

[ext_resource type="Theme" uid="uid://dk00e0x0py63n" path="res://Styles/Themes/StoneTheme.tres" id="1_68w7f"]
[ext_resource type="Script" uid="uid://cgsbaw11ml8mo" path="res://Scripts/win_screen.gd" id="1_d8xbi"]

[node name="WinScreen" type="CanvasLayer"]
script = ExtResource("1_d8xbi")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_68w7f")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VICTORY" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "VICTORY!!!"
horizontal_alignment = 1

[node name="Time" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "1:00"
horizontal_alignment = 1

[node name="LevelName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Level Name"
horizontal_alignment = 1

[node name="LevelCreator" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Made By: "
horizontal_alignment = 1

[node name="Play Again" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Again"

[node name="Levels" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Levels"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Play Again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Levels" to="." method="_on_levels_pressed"]
